[gd_scene load_steps=6 format=3 uid="uid://b7x6b12ifi3to"]

[ext_resource type="Script" path="res://Scripts/Reality/RealityPlayer.gd" id="1_qfk7p"]
[ext_resource type="Script" path="res://addons/interpolated_camera_3d/interpolated_camera_3d.gd" id="2_p8pfi"]
[ext_resource type="AudioStream" uid="uid://cxvqvqdoi4lmo" path="res://Assets/SFX/Reality/carpet step.ogg" id="2_ujkle"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ncbc3"]
radius = 0.431

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_376l6"]
radius = 0.565985
height = 3.72

[node name="RealityPlayer" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_qfk7p")
SPEED = 3.0

[node name="Reference" type="MeshInstance3D" parent="."]
transform = Transform3D(1.40388, 0, 0, 0, 1.86831, 0, 0, 0, 1.40388, 0, 0, 0)
cast_shadow = 0
mesh = SubResource("CapsuleMesh_ncbc3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_376l6")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.15775, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
fov = 67.0

[node name="ObjectRay" type="RayCast3D" parent="Head/Camera3D"]
target_position = Vector3(0, 0, -2)

[node name="InterpolatedCamera3D" type="Camera3D" parent="." node_paths=PackedStringArray("target")]
current = true
fov = 67.0
script = ExtResource("2_p8pfi")
rotate_speed = 0.8
target = NodePath("../Head/Camera3D")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
light_color = Color(0.631373, 0.639216, 0.831373, 1)
light_energy = 0.1
omni_range = 1.92578

[node name="FootStepSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.47599, 0)
stream = ExtResource("2_ujkle")
panning_strength = 1.5
bus = &"NormalSound"

[node name="FootstepTimer" type="Timer" parent="."]
one_shot = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -70.0
offset_top = -53.0
offset_right = 70.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 0
text = "Light Switch
Press E to interact"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="FootstepTimer" to="." method="_on_footstep_timer_timeout"]
